--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
   <body> 
     <%= render 'home/navbar' %>
     <div class="container mt-4">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render partial: 'home/flash' %>
       <%= yield %>
     </div>
   </body>
