--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -6,15 +6,28 @@
   <thead class="thead-dark">
     <tr>
       <th>Company</th>
+      <th>Latest Price</th>
+      <th>Market Capitalization</th>
     </tr>
   </thead>
 
   <tbody>
     <div id="stocks">
       <% @stocks.each do |stock| %>
-        <% if stock.user_id == current_user.id %>
+        <% begin %>
+          <% @ticker = StockQuote::Stock.quote(stock.ticker) %>
           <tr>
-            <td><%= link_to stock.ticker.upcase, stock %></td>
+            <td><%= link_to @ticker.company_name, stock %></td>
+            <td>$<%= number_with_precision(@ticker.latest_price, precision: 2, delimiter: ",") %></td>
+            <td>$<%= number_with_precision(@ticker.market_cap, precision: 0, delimiter: ",") %></td>
+            <td><center><%= link_to 'Edit', edit_stock_path(stock), class: "btn btn-secondary" %></center></td>
+            <td><center><%= link_to 'Delete', stock_path(stock), data: { turbo_method: :delete }, class: "btn btn-danger" %></center></td>
+          </tr>
+        <% rescue %>
+          <tr>
+            <td>Ticker doesn't exist</td>
+            <td>N/A</td>
+            <td>N/A</td>
             <td><center><%= link_to 'Edit', edit_stock_path(stock), class: "btn btn-secondary" %></center></td>
             <td><center><%= link_to 'Delete', stock_path(stock), data: { turbo_method: :delete }, class: "btn btn-danger" %></center></td>
           </tr>
